fix overflow under 600px

--- a/css/base/global.css
+++ b/css/base/global.css
@@ -128,3 +128,10 @@ body {
         padding: 0.0em 2em !important
     }
 }
+
+@media only screen and (min-width: 600px) and (min-width: 1024){
+    .main {
+        perspective: 0px;
+    }
+
+}
