--- a/css/sections/testimonials.css
+++ b/css/sections/testimonials.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    z-index: 10;
     background-color:var(--light--body-bg);    
     padding-bottom: 2.5em;
 
@@ -194,7 +195,7 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 600px)  and (max-width: 768px) {
     .testimonials {
         height: 140vh;
     }
